--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,21 @@ body{
   background-size: cover;
   background-attachment: fixed;
 }
+
+/* Contenedor Principal */
+.content{
+  width: 40%;
+  margin: 100px auto;
+  padding: 2rem;
+  
+  text-align: center;
+  color: white;
+  line-height: 1.5;
+
+  background-color: rgba(20, 20, 20, 0.5);
+  border-radius: 10px;
+}
+
+.content h1{
+  margin-bottom: 2rem;
+}
