--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,15 @@
 @charset "utf-8";
+/* Carga de Fuentes */
+@font-face{
+  font-family: "robotoB";
+  src: url("../fonts/Roboto-Black.ttf");
+}
+
+@font-face{
+  font-family: "roboto";
+  src: url("../fonts/Roboto-Regular.ttf");
+}
+
 /* Margenes y bordes */
 *{
   margin: 0;
@@ -19,6 +30,7 @@ body{
   background: url(../img/backg.jpg) no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  font-family: roboto;
 }
 
 /* Contenedor Principal */
@@ -37,4 +49,5 @@ body{
 
 .content h1{
   margin-bottom: 2rem;
+  font-family: robotoB;
 }
